--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,25 @@
-.car__icon {
-    font-size: 60px;
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.footer {
+  width: 100%;
+  min-width: 960px;
+  margin: 0 auto;
+}
+.footer .navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer .navigation__item {
+  color: #1978f5;
+}
+
+.card__icon {
+  font-size: 40px;
+  color: #1978f5;
+  background-color: #3fc0c5;
 }
