--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,13 @@
 // abstracts
+@use './abstracts/variables';
 
 // vendors
 
 // base
+@use './base/base';
 
 // layout
+@use './layout/footer';
 
 // components
 @use './components/card';
