termina trabajo con rellenado de readme,md

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -1,7 +1,8 @@
 @use '../abstracts/variables';
 
 .card {
-    &__icon {
+  overflow: hidden;
+  &__icon {
 font-size: 40px;
 color: variables.$weather-dusk-blue;
 background-color: variables.$weather-lihth-cian;
